--- a/WAF-logs/complete-cfn-template/enable-waf-logging-cloudwatch.yaml
+++ b/WAF-logs/complete-cfn-template/enable-waf-logging-cloudwatch.yaml
@@ -33,10 +33,15 @@ Parameters:
     Default: 7
     Description: "Log retention period in days"
 
+  KMSKeyArn:
+    Type: String
+    Description: "Arn of the KMS key to encrypt the log group"
+
 Resources:
   LogGroup:
     Type: AWS::Logs::LogGroup
     Properties:
+      KmsKeyId: !Ref KMSKeyArn
       LogGroupName: !Sub aws-waf-logs-${LogGroupPrefix}
       RetentionInDays: !Ref LogRetentionDays
 
