--- a/WAF-logs/complete-cfn-template/contributor-insights-dashboard.yaml
+++ b/WAF-logs/complete-cfn-template/contributor-insights-dashboard.yaml
@@ -25,7 +25,7 @@ Resources:
   ContributorInsightTop10TerminatingRules:
     Type: AWS::CloudWatch::InsightRule
     Properties:
-      RuleBody: |
+      RuleBody: !Sub |
         {
           "AggregateOn": "Count",
           "Contribution": {
@@ -36,7 +36,7 @@ Resources:
           },
           "LogFormat": "JSON",
           "LogGroupNames": [
-              "aws-waf-logs-test"
+              "${LogGroupName}"
           ],
           "Schema": {
             "Name": "CloudWatchLogRule",
@@ -49,7 +49,7 @@ Resources:
   ContributorInsightTop10IPbyRateBasedRules:
     Type: AWS::CloudWatch::InsightRule
     Properties:
-      RuleBody: |
+      RuleBody: !Sub |
         {
           "Schema": {
             "Name": "CloudWatchLogRule",
@@ -71,7 +71,7 @@ Resources:
           },
           "LogFormat": "JSON",
           "LogGroupNames": [
-              "aws-waf-logs-test"
+              "${LogGroupName}"
           ]
         }
       RuleName: Top10IPsBlockedbyRateBasedRules
@@ -80,7 +80,7 @@ Resources:
   ContributorInsightTop10IPURIforBlockedRequests:
     Type: AWS::CloudWatch::InsightRule
     Properties:
-      RuleBody: |
+      RuleBody: !Sub |
         {
           "Schema": {
             "Name": "CloudWatchLogRule",
@@ -103,7 +103,7 @@ Resources:
           },
           "LogFormat": "JSON",
           "LogGroupNames": [
-              "aws-waf-logs-test"
+              "${LogGroupName}"
           ]
         }
       RuleName: Top10IPURIforBlockedRequests
@@ -112,7 +112,7 @@ Resources:
   ContributorInsightTop10RulesWithonRuleGroup1:
     Type: AWS::CloudWatch::InsightRule
     Properties:
-      RuleBody: |
+      RuleBody: !Sub |
         {
           "Schema": {
             "Name": "CloudWatchLogRule",
@@ -128,7 +128,7 @@ Resources:
           },
           "LogFormat": "JSON",
           "LogGroupNames": [
-              "aws-waf-logs-test"
+              "${LogGroupName}"
           ]
         }
       RuleName: Top10RulesWithonRuleGroup1
@@ -137,7 +137,7 @@ Resources:
   ContributorInsightTop10RulesWithonRuleGroup2:
     Type: AWS::CloudWatch::InsightRule
     Properties:
-      RuleBody: |
+      RuleBody: !Sub |
         {
           "Schema": {
             "Name": "CloudWatchLogRule",
@@ -153,7 +153,7 @@ Resources:
           },
           "LogFormat": "JSON",
           "LogGroupNames": [
-              "aws-waf-logs-test"
+              "${LogGroupName}"
           ]
         }
       RuleName: Top10RulesWithonRuleGroup2
